--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
         <div class="container">
             <nav>
                 <img src="./Images/logo-vamshi.png" alt="Logo">
-                <ul>
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact me</a></li>
-                </ul>
+                <div class="nav-links">
+                    <ul>
+                        <li><a class="nav-li" href="#header">Home</a></li>
+                        <li><a class="nav-li" href="#about">About</a></li>
+                        <li><a class="nav-li" href="#contact">Contact me</a></li>
+                        <i class="icons fa-solid fa-circle-xmark" style="color: #f0f2dc;"></i>
+                    </ul>
+                </div>
+                <i class="icons fa-sharp fa-solid fa-bars" style="color: #f0f2dc;"></i>
             </nav>
         </div>
         <div class="header-text">
-            <h1>Hi! I'm P. Vamshi</h1>
+            <h1>Hi! I'm P.Vamshi</h1>
         </div>
     </header>
     <main>
         <div id="about">
             <div class="container">
                 <h2 class="subTitle">About Me</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam quaerat voluptate, maiores, libero id deserunt, dolor est ea ex aut aliquam fugiat ipsa veritatis numquam? Nemo unde magnam labore ad odio quidem culpa quis laboriosam. Odio, cupiditate repudiandae? Nostrum facilis doloribus cum distinctio nihil! Aliquam sunt saepe officiis nihil cumque consequatur dolores molestias id dolore, placeat excepturi nesciunt, aspernatur fugiat. Inventore corporis incidunt corrupti adipisci, enim illo quia dolores aliquam quas possimus molestias dicta mollitia ducimus impedit sint nobis officia voluptate consectetur itaque perspiciatis? Esse cum mollitia odit quae asperiores, velit repudiandae distinctio? Rem dolor sit atque voluptatem a numquam?</p>
+                <p>My name is Pinninti Vamshi. Currently studying in National Institute of Technology, Rourkela. Taking specialization in Electronics and Communication Engineering. Wanna know more download my resume.</p>
                 <div class="tab-titles">
                     <h3 class="tab-links active-tab">Education</h3>
                     <h3 class="tab-links">Skills</h3>
                     <h3 class="tab-links">Experience</h3>
-                    <h3 class="tab-links">Coding-Profile</h3>
+                    <h3 class="tab-links">Links</h3>
                 </div>
                 <div class="tab-contents active-link" id="Education">
                     <ul>
@@ -41,9 +45,9 @@
                 </div>
                 <div class="tab-contents" id = "Skills">
                     <ul>
-                        <li><b>Web development</b></li>
-                        <li><b>Game development</b></li>
-                        <br><br><br><br><br><br><br>`<br>
+                        <li>Web development</li>
+                        <li>Game development</li>
+                        <br><br><br><br><br><br><br><br>
                     </ul>
                 </div>
                 <div class="tab-contents" id = "Experience">
@@ -53,7 +57,7 @@
                         <br><br><br><br><br><br><br>
                     </ul>
                 </div>
-                <div class="tab-contents" id = "Coding-Profile">
+                <div class="tab-contents" id = "Links">
                     <ul>
                         <li><a href="https://leetcode.com/vamshi3101/" target="_blank">Leetcode</a></li>
                         <li><a href="https://www.codechef.com/users/vamshi_p" target="_blank">Codechef</a></li>
@@ -92,7 +96,7 @@
         </div>
     </main>
     <footer>
-        <marquee direction="right">Copyright &copy; Vamshi</marquee>
+        <p>Copyright &copy; Vamshi</p>
     </footer>
     <script src="https://kit.fontawesome.com/039b41251e.js" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
