--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>P Vamshi- Web developer, Programmer, Game developer</title>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -14,6 +15,7 @@
                     <ul>
                         <li><a class="nav-li" href="#header">Home</a></li>
                         <li><a class="nav-li" href="#about">About</a></li>
+                        <li><a class="nav-li" href="#project">Project</a></li>
                         <li><a class="nav-li" href="#contact">Contact me</a></li>
                         <i class="icons fa-solid fa-circle-xmark" style="color: #f0f2dc;"></i>
                     </ul>
@@ -29,7 +31,7 @@
         <div id="about">
             <div class="container">
                 <h2 class="subTitle">About Me</h2>
-                <p>My name is Pinninti Vamshi. Currently studying in National Institute of Technology, Rourkela. Taking specialization in Electronics and Communication Engineering. Wanna know more download my resume.</p>
+                <p>My name is Pinninti Vamshi. Currently studying in National Institute of Technology, Rourkela. Taking specialization in Electronics and Communication Engineering. Wanna know more download my resume. Check out my projects in github.</p>
                 <div class="tab-titles">
                     <h3 class="tab-links active-tab">Education</h3>
                     <h3 class="tab-links">Skills</h3>
@@ -67,29 +69,54 @@
                 </div>
             </div>
         </div>
+        <div id="project">
+            <div class="container">
+                <h2 class="subTitle">Project</h2>
+                <a href="https://vamshi3101.github.io/todo-list/" target="_blank">
+                    <div class="card">
+                        <img src="./Images/Todo-list.png" alt="todo list project">
+                        <h2>Todo list</h2>
+                    </div>
+                </a>
+                <a href="https://vamshi3101.github.io/Calculator/" target="_blank">
+                    <div class="card">
+                        <img src="./Images/Calculator.png" alt="Calculator project">
+                        <h2>Calculator</h2>
+                    </div>
+                </a>
+                <a href="https://vamshi3101.github.io/StrawHats/" target="_blank">
+                    <div class="card">
+                        <img src="./Images/StrawHats.png" alt="Onepiece project">
+                        <h2>Straw Hats</h2>
+                    </div> 
+                </a>
+            </div>
+        </div>
         <div id="contact">
             <div class="container">
                 <h2 class="subTitle">Contact Me</h2>
                 <div class="row">
                     <div class="contact-left">
-                        <p><i class="fa-regular fa-envelope"></i> vamshi3101@gmail.com</p>
+                        <p><i class="fa-regular fa-envelope"></i>vamshi3101@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i> 6300549566</p>
                         <div class="social-icons">
                             <a href="https://www.linkedin.com/in/p-vamshi-9b7a84219/"><i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://twitter.com/p_vamshi_"><i class="fa-brands fa-twitter"></i></a>
-                            <a href=""><i class="fa-brands fa-instagram"></i></a>
-                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://github.com/Vamshi3101"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://www.instagram.com/vamshi.pinninti/"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/vamshi.pinninti.9"><i class="fa-brands fa-facebook"></i></a>
                         </div>
                         <a href="./P_Vamshi.pdf" target="_blank" class="btn" download>Download CV</a>
                     </div>
                     <div class="contact-right">
-                        <form>
+                        <form name = "submit-to-google-sheet">
                             <input type="text" name = "Name" placeholder="Enter your Name" required class="half">
                             <input type="email" name="email" placeholder="Enter your email" required class="half">
                             <textarea name="Message" rows="2" placeholder="Enter your message"></textarea>
                             <button type="submit" class="btn2">Submit</button>
                             <button type="reset" class="btn2">Reset</button>
                         </form>
+                        <span class="msg"></span>
                     </div>
                 </div>
             </div>
@@ -100,5 +127,22 @@
     </footer>
     <script src="https://kit.fontawesome.com/039b41251e.js" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbysq8F7hJgBCMISDvl3Dcg7a1YGPZSvyoInARJanTLrHPUdFHNT05jocm5N-blA37TfTg/exec'
+        const form = document.forms['submit-to-google-sheet']
+    
+        form.addEventListener('submit', e => {
+        e.preventDefault()
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                document.querySelector(".msg").innerHTML = "Sent!"
+                setTimeout(()=>{
+                    document.querySelector(".msg").innerHTML=""
+                },3000)
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+    </script>
 </body>
 </html>
